unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/QS_Customer_Asset_Detail__c.object-meta.xml
<CustomObject>
    <description>Transnational detail that feeds the Customer Assets
		Start/End Dates, ARR</description>
    <label>Subscription Transaction</label>
    <nameField>
        <displayFormat>CAT-{0000000}</displayFormat>
        <label>Subscription Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>