unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/Demo_CheckBox_for_ARR__c.field-meta.xml
<CustomField>
    <fullName>Demo_CheckBox_for_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo CheckBox for ARR</label>
    <type>Checkbox</type>
</CustomField>