unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_15_Digit_Customer_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>QS_15_Digit_Customer_Asset_ID__c</fullName>
    <description>The Salesforce Id for the Customer Asset this CAT aggregates under.</description>
    <formula>QS_Customer_Asset__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Salesforce Id for the Customer Asset this CAT aggregates under.</inlineHelpText>
    <label>15 Digit Customer Asset ID</label>
    <type>Text</type>
</CustomField>