unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Account__c.field-meta.xml
<CustomField>
    <fullName>QS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer who owns the product.</description>
    <inlineHelpText>The customer who owns the product.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Asset_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>