unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Apex_Created_Decommission_Record__c.field-meta.xml
<CustomField>
    <fullName>QS_Apex_Created_Decommission_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the decommission CAT record was created via APEX. All CAT records will have this checked unless created via data load.</description>
    <inlineHelpText>Indicates that the decommission CAT record was created via APEX. All CAT records will have this checked unless created via data load.</inlineHelpText>
    <label>Apex Created Decommission Record</label>
    <type>Checkbox</type>
</CustomField>