unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_ARR_Growth__c.field-meta.xml
<CustomField>
    <fullName>QS_ARR_Growth__c</fullName>
    <description>For amendments/renewals, the difference between the Initial ARR value (from the source Quote Line) and this line’s own ARR. The basis for a new or separate sale is $0 b/c there is no “source” Quote Line. Can be a negative number (reduction/cancellation).</description>
    <inlineHelpText>For amendments/renewals, the difference between the Initial ARR value (from the source Quote Line) and this line’s own ARR. The basis for a new or separate sale is $0 b/c there is no “source” Quote Line. Can be a negative number (reduction/cancellation).</inlineHelpText>
    <label>ARR Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>