unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Asset__c.field-meta.xml
<CustomField>
    <fullName>QS_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the product record in the native Asset table , if this CAT record correlates to a one-time product rather than a Subscription.</description>
    <inlineHelpText>Link to the product record in the native Asset table , if this CAT record correlates to a one-time product rather than a Subscription.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>