unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>QS_BillingFrequency__c</fullName>
    <description>Billing Frequency from the Quote Line.</description>
    <inlineHelpText>Billing Frequency from the Quote Line.</inlineHelpText>
    <label>BillingFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>