unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Booking_Date__c</fullName>
    <description>The close date of the source Opportunity.</description>
    <inlineHelpText>The close date of the source Opportunity.</inlineHelpText>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>