unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Contract__c.field-meta.xml
<CustomField>
    <fullName>QS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contract from which the source subscription originated. This field will be blank if the CAT is generated from an Asset (Non-Recurring Product) as those are not related to Contracts, only Accounts.</description>
    <inlineHelpText>The Contract from which the source subscription originated. This field will be blank if the CAT is generated from an Asset (Non-Recurring Product) as those are not related to Contracts, only Accounts.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>