unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Currently_Active__c.field-meta.xml
<CustomField>
    <fullName>QS_Currently_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the start date of the CAT is in the today or passed and the end date is today in the future.</description>
    <inlineHelpText>Indicates that the start date of the CAT is in the today or passed and the end date is today in the future.</inlineHelpText>
    <label>Currently Active</label>
    <type>Checkbox</type>
</CustomField>