unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>QS_Customer_Asset__c</fullName>
    <description>Master-Detail lookup to the parent Customer Asset record.</description>
    <inlineHelpText>Master-Detail lookup to the parent Customer Asset record.</inlineHelpText>
    <label>Customer Asset</label>
    <referenceTo>QS_Customer_Asset__c</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>