unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Decommission_Reason__c.field-meta.xml
<CustomField>
    <fullName>QS_Decommission_Reason__c</fullName>
    <description>Populated here if populated on the Amendment opportunity,</description>
    <inlineHelpText>Populated here if populated on the Amendment opportunity,</inlineHelpText>
    <label>Decommission Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>