unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_End_Date__c</fullName>
    <description>The End Date of the source Subscription. This is blank when the CAP source is an Asset (non-recurring product).</description>
    <inlineHelpText>The End Date of the source Subscription. This is blank when the CAP source is an Asset (non-recurring product).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>