unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Is_Contract_Terminated__c.field-meta.xml
<CustomField>
    <fullName>QS_Is_Contract_Terminated__c</fullName>
    <description>True if Terminated Date is populated on the source Subscription.</description>
    <formula>NOT ISBLANK(QS_Subscription__r.SBQQ__TerminatedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Terminated Date is populated on the source Subscription.</inlineHelpText>
    <label>Is Contract Terminated</label>
    <type>Checkbox</type>
</CustomField>