unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Is_Last_Segment__c.field-meta.xml
<CustomField>
    <fullName>QS_Is_Last_Segment__c</fullName>
    <description>True if the Subscription Contract’s End Date is the same as this CAT (therefore the Subscription’s End Date). Relevant for MDQ.</description>
    <formula>QS_Contract__r.EndDate =   QS_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the Subscription Contract’s End Date is the same as this CAT (therefore the Subscription’s End Date). Relevant for MDQ.</inlineHelpText>
    <label>Is Last Segment</label>
    <type>Checkbox</type>
</CustomField>