unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Is_Renewal_Closed__c.field-meta.xml
<CustomField>
    <fullName>QS_Is_Renewal_Closed__c</fullName>
    <description>True if the Renewal Opportunity referenced on the source Subscription’s Contract is closed.</description>
    <formula>QS_Contract__r.SBQQ__RenewalOpportunity__r.IsClosed = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the Renewal Opportunity referenced on the source Subscription’s Contract is closed.</inlineHelpText>
    <label>Is Renewal Closed</label>
    <type>Checkbox</type>
</CustomField>