unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Line_Classification__c.field-meta.xml
<CustomField>
    <fullName>QS_Line_Classification__c</fullName>
    <description>Denotes if this transaction resulted in a &quot;New Logo&quot; sale, an &quot;Up-sell,&quot; a &quot;Cross-sell,&quot; &quot;Decommission,&quot; or &quot;Reduction&quot;</description>
    <inlineHelpText>Denotes if this transaction resulted in a &quot;New Logo&quot; sale, an &quot;Up-sell,&quot; a &quot;Cross-sell,&quot; &quot;Decommission,&quot; or &quot;Reduction&quot;</inlineHelpText>
    <label>Line Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>