unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Maintain_Line__c.field-meta.xml
<CustomField>
    <fullName>QS_Maintain_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for CATs created from Percent of Total Subscriptions. This flag is used to ensure the maintenance lines are excluded from the Quantity roll up.</description>
    <inlineHelpText>Checked for CATs created from Percent of Total Subscriptions. This flag is used to ensure the maintenance lines are excluded from the Quantity roll up.</inlineHelpText>
    <label>Maintain Line</label>
    <type>Checkbox</type>
</CustomField>