unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>QS_One_Time_Fee__c</fullName>
    <description>The one-time fee for this product paid at the time of purchase. Populated from Asset.QS_Net_Price__c. The one-time fee field on the Subscription object should be deleted.</description>
    <inlineHelpText>The one-time fee for this product paid at the time of purchase. Populated from Asset.QS_Net_Price__c. The one-time fee field on the Subscription object should be deleted.</inlineHelpText>
    <label>One Time Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>