unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>QS_Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contract from which the lost renewal opportunity was generated. CAT records are generated for lost renewals. This is blank unless a renewal is lost that contains the source Subscription for this CAT.</description>
    <inlineHelpText>Reference to the Contract from which the lost renewal opportunity was generated. CAT records are generated for lost renewals. This is blank unless a renewal is lost that contains the source Subscription for this CAT.</inlineHelpText>
    <label>Terminated Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Customer_Asset_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>