unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Process_By_Manual_Run__c.field-meta.xml
<CustomField>
    <fullName>QS_Process_By_Manual_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables User to select a CAT record that has an incorrect status and run the update batch job on selected records (separate from the nightly job).</description>
    <inlineHelpText>Enables User to select a CAT record that has an incorrect status and run the update batch job on selected records (separate from the nightly job).</inlineHelpText>
    <label>Process By Manual Run</label>
    <type>Checkbox</type>
</CustomField>