unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Product__c.field-meta.xml
<CustomField>
    <fullName>QS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product this CAT represents.</description>
    <inlineHelpText>The product this CAT represents.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>