unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Product_Subscription_Pricing__c.field-meta.xml
<CustomField>
    <fullName>QS_Product_Subscription_Pricing__c</fullName>
    <description>Formula = TEXT(QS_Product__r.SBQQ__SubscriptionPricing__c). If this field is populated, the system treats the product as recurring. If blank, the system treats the product as an asset (non-recurring product).</description>
    <formula>TEXT(QS_Product__r.SBQQ__SubscriptionPricing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula = TEXT(QS_Product__r.SBQQ__SubscriptionPricing__c). If this field is populated, the system treats the product as recurring. If blank, the system treats the product as an asset (non-recurring product).</inlineHelpText>
    <label>Product Subscription Pricing</label>
    <type>Text</type>
</CustomField>