unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>QS_Quantity__c</fullName>
    <description>The amount of the Product in this CAT from the asset or subscription. Positive quantities originate from a new sale, additions, or renewals. Negative quantities only originate from an amendment. An existing CAT record’s Quantity value never changes.</description>
    <inlineHelpText>The amount of the Product in this CAT from the asset or subscription. Positive quantities originate from a new sale, additions, or renewals. Negative quantities only originate from an amendment. An existing CAT record’s Quantity value never changes.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>