unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>QS_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referene to the source Quote Line for this CAT.</description>
    <inlineHelpText>Referene to the source Quote Line for this CAT.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipName>Customer_Asset_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>