unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Renewed_Date__c</fullName>
    <description>Formula = QS_Subscription__r.SBQQ__RenewedDate__c. Shows the renewed date of the source Subscription record (if CAT was creted from a Subscription). Will always be blank if the CAT represents a non-recurring product.</description>
    <formula>QS_Subscription__r.SBQQ__RenewedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula = QS_Subscription__r.SBQQ__RenewedDate__c. Shows the renewed date of the source Subscription record (if CAT was creted from a Subscription). Will always be blank if the CAT represents a non-recurring product.</inlineHelpText>
    <label>Renewed Date</label>
    <type>Date</type>
</CustomField>