unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Start_Date__c</fullName>
    <description>The start date from the source Quote Line for this CAT.</description>
    <inlineHelpText>The start date from the source Quote Line for this CAT.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>