unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Subscribed_Asset__c.field-meta.xml
<CustomField>
    <fullName>QS_Subscribed_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the subscribed Asset junction record that connects this CAT with its source Asset or Subscription.</description>
    <inlineHelpText>Lookup to the subscribed Asset junction record that connects this CAT with its source Asset or Subscription.</inlineHelpText>
    <label>Subscribed Asset</label>
    <referenceTo>SBQQ__SubscribedAsset__c</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>