unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Subscription__c.field-meta.xml
<CustomField>
    <fullName>QS_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Subscription record that is the originating source for this CAT.</description>
    <inlineHelpText>Reference to the Subscription record that is the originating source for this CAT.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipName>QS_Customer_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>