unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Terminated_Date__c</fullName>
    <description>Populated when the source Subscription is cancelled or not renewed. CPQ terminated date indicates that a product has been fully decommissioned. The terminated date will always be the day before the renewal subscription&#39;s Start Date (by CPQ design).</description>
    <formula>QS_Subscription__r.SBQQ__TerminatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated when the source Subscription is cancelled or not renewed. CPQ terminated date indicates that a product has been fully decommissioned. The terminated date will always be the day before the renewal subscription&#39;s Start Date (by CPQ design).</inlineHelpText>
    <label>Terminated Date</label>
    <type>Date</type>
</CustomField>