unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>QS_Transaction_Type__c</fullName>
    <description>&quot;Indicates the nature of the  transaction when it is first created, based on quantity changes.
Sale = A positive quantity transaction.
Reduction = A partial reduction in quantity.
Decommission = A full reduction in quantity&quot;</description>
    <formula>if( QS_Quantity__c = 0,&#39;Decommission&#39;,
if( QS_Quantity__c &lt; 0,&#39;Reduction&#39;,
&#39;Sale&#39;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Indicates the nature of the  transaction when it is first created, based on quantity changes.
Sale = A positive quantity transaction.
Reduction = A partial reduction in quantity.
Decommission = A full reduction in quantity&quot;</inlineHelpText>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>