unpackaged/main/default/objects/QS_Customer_Asset_Detail__c/fields/QS_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>QS_UniqueKey__c</fullName>
    <description>Contains only one id: Subscription Id or Asset Id--or, for Percent of Total products, the Subscribed Asset Id. The logic to collapse multiple CATs into one Customer Asset record does not use this field but uses the ID of whichever record is referenced.</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains only one id: Subscription Id or Asset Id--or, for Percent of Total products, the Subscribed Asset Id. The logic to collapse multiple CATs into one Customer Asset record does not use this field but uses the ID of whichever record is referenced.</inlineHelpText>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>